# CodeSentinel

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  QUICK_START_NOVA.md  README.md  demo_llm_agent.py  demo_vulnerable_code.py  docker-compose.yml  k8s-deployment.yaml  nginx.conf  pyproject.toml  requirements.txt  scan_json_security.py  setup.py
agents/: __init__.py  analyzer_agent.py  coordinator_agent.py  documenter_agent.py  llm_reviewer_agent.py  reviewer_agent.py
api/: __init__.py  cli.py  main.py
config/: __init__.py  settings.py
docs/: CLI_USAGE.md  DEPLOYMENT.md  INSTALLATION.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SESSION_MANAGEMENT.md
examples/: README.md  analysis_config.yaml  analysis_config_example.yaml  analyzer_agent_demo.py  cli_config_example.json  cli_config_example.yaml  coding_standards_airbnb.yaml  coding_standards_google.yaml  coding_standards_pep8.yaml  comprehensive_config.yaml  coordinator_agent_demo.py  documenter_agent_demo.py  github_actions_workflow.yml  gitlab_ci_workflow.yml  memory_bank_demo.py  reviewer_agent_demo.py  session_manager_demo.py
models/: __init__.py  data_models.py
scripts/: README.md  create-k8s-secrets.sh  docker-deploy.sh  validate_deployment.py  verify_setup.py
storage/: __init__.py  memory_bank.py  session_manager.py
tests/: README_TASK_3.md  __init__.py  test_analyzer_agent.py  test_api.py  test_cicd_integration.py  test_code_parser.py  test_coordinator_agent.py  test_data_models.py  test_documenter_agent.py  test_end_to_end.py  test_error_handling_recovery.py  test_file_system.py  test_memory_bank.py  test_observability.py  test_quality_metrics.py  test_reviewer_agent.py  test_session_manager.py  test_setup.py
tools/: __init__.py  cicd_integration.py  code_parser.py  error_handling.py  (+4 more)
(+2 files in other folders)
